--- a/Assignment3/Web.config
+++ b/Assignment3/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="CoursesDB" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\CoursesDB.mdf;Initial Catalog=CoursesDB;Integrated Security=True"
+    <add name="AppDataContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\CoursesDB.mdf;Initial Catalog=CoursesDB;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
